Template viewler, controllerlar, database eklendi

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,77 +1,185 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TemplateProject</title>
-
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
-    </environment>
-    <link rel="stylesheet" href="~/css/site.css" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Template Project | @ViewData["Title"]</title>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <link rel="stylesheet" href="~/Content/Site/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/Site/bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Content/Site/bower_components/Ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="~/Content/Site/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="~/Content/Site/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="~/Content/Site/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="~/Content/Site/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/Site/bower_components/select2/dist/css/select2.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TemplateProject</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+<body class="hold-transition skin-blue sidebar-mini">
+    <div class="wrapper">
+        <header class="main-header">
+            <a asp-controller="Home" asp-action="Index" class="logo">
+                <span class="logo-mini"><b>Tmp</b>D</span>
+                <span class="logo-lg"><b>Template</b> DRK</span>
+            </a>
+            <nav class="navbar navbar-static-top">
+                <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+                    <span class="sr-only">Toggle navigation</span>
+                </a>
+                <div class="navbar-custom-menu">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown user user-menu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <img src="~/Content/Site/dist/img/avatar5.png" class="user-image" alt="User Image">
+                                <span class="hidden-xs">
+                                    @this.User?.Claims?.FirstOrDefault()?.Subject?.Name
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="user-header">
+                                    <img src="~/Content/Site/dist/img/avatar5.png" class="img-circle" alt="User Image">
+                                    <p>
+                                        @this.User?.Claims?.FirstOrDefault()?.Subject?.Name
+                                        <small></small>
+                                    </p>
+                                </li>
+                                <li class="user-footer">
+                                    <div class="pull-left">
+                                        <a href="#" class="btn btn-default btn-flat disabled">Ayarlar</a>
+                                    </div>
+                                    <div class="pull-right">
+                                        <a asp-controller="Account" asp-action="Logout" class="btn btn-adn btn-flat">Çıkış Yap</a>
+                                    </div>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
+            </nav>
+        </header>
+        <aside class="main-sidebar">
+            <section class="sidebar">
+                <div class="user-panel">
+                    <div class="pull-left image">
+                        <img src="~/Content/Site/dist/img/avatar5.png" class="img-circle" alt="User Image">
+                    </div>
+                    <div class="pull-left info">
+                        <p>
+                            @this.User?.Claims?.FirstOrDefault()?.Subject?.Name.Split("@")[0]
+                        </p>
+                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                    </div>
+                </div>
+                <ul class="sidebar-menu" data-widget="tree">
+                    <li class="header">Menü</li>
+                    <li>
+                        <a asp-controller="Home" asp-action="Index">
+                            <i class="fa fa-home"></i> <span>Ana Sayfa</span>
+                        </a>
+                    </li>
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="glyphicon glyphicon-folder-open"></i> <span>Controller</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a asp-controller="Main" asp-action="Index"><i class="fa fa-circle-o text-red"></i> Müşteri Listesi</a></li>
+                            <li><a asp-controller="Main" asp-action="Index1"><i class="fa fa-circle-o text-red"></i> Poliçe Listesi</a></li>
+                            <li><a asp-controller="Main" asp-action="Index2"><i class="fa fa-circle-o text-red"></i> Pasif Poliçe Listesi</a></li>
+                        </ul>
+                    </li>
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-gears"></i> <span>Sistem Değişkenleri</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a asp-controller="System" asp-action="Index"><i class="fa fa-circle-o text-yellow"></i> Marka Listesi</a></li>
+                            <li><a asp-controller="System" asp-action="Index2"><i class="fa fa-circle-o text-yellow"></i> Model Listesi</a></li>
+                            <li><a asp-controller="System" asp-action="Index3"><i class="fa fa-circle-o text-yellow"></i> Sigorta Şirketi Listesi</a></li>
+                            <li><a asp-controller="System" asp-action="Index4"><i class="fa fa-circle-o text-yellow"></i> Poliçe Türü Listesi</a></li>
+                        </ul>
+                    </li>
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-line-chart"></i> <span>Raporlar</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a asp-controller="Report" asp-action="XReport"><i class="fa fa-circle-o text-aqua"></i> X Report</a></li>
+                            <li><a asp-controller="Report" asp-action="YReport"><i class="fa fa-circle-o text-aqua"></i> Y Report</a></li>
+                            <li><a asp-controller="Report" asp-action="ZReport"><i class="fa fa-circle-o text-aqua"></i> Z Report</a></li>
+                            <li><a asp-controller="Report" asp-action="TReport"><i class="fa fa-circle-o text-aqua"></i> T Report</a></li>
+                            <li><a asp-controller="Report" asp-action="QReport"><i class="fa fa-circle-o text-aqua"></i> Q Report</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </section>
+        </aside>
+
+        <div class="content content-wrapper">
             @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2019 - TemplateProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+        <footer class="main-footer">
+            <div class="pull-right hidden-xs">
+                <b>Version</b> 1.0.0
+            </div>
+            <strong>Copyright &copy; @DateTime.Now.Year <a href="#">Template Project</a>.</strong> Tüm Hakları Saklıdır.
+        </footer>
+    </div>
+    <script src="~/Content/Site/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="~/Content/Site/bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <script>
+        $.widget.bridge('uibutton', $.ui.button);
+    </script>
+    <script src="~/Content/Site/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/Content/Site/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+    <script src="~/Content/Site/bower_components/jquery-knob/dist/jquery.knob.min.js"></script>
+    <script src="~/Content/Site/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/Content/Site/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="~/Content/Site/bower_components/fastclick/lib/fastclick.js"></script>
+    <script src="~/Content/Site/dist/js/adminlte.min.js"></script>
+    <script src="~/Content/Site/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="~/Content/Site/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <script src="~/Content/Site/dist/js/demo.js"></script>
+    <script src="~/Content/Site/bower_components/select2/dist/js/select2.full.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#allTables').DataTable({
+                "language": {
+                    processing: '<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Yükleniyor...</span> ',
+                    zeroRecords: "Hiçbir kayıt bulunamadı.",
+                    emptyTable: "Kayıt bulunmamaktadır.",
+                    search: "Ara:",
+                    oPaginate: {
+                        "sNext": "Sonraki",
+                        "sPrevious": "Önceki"
+                    },
+                    sLengthMenu: "_MENU_ adet kayıt getir",
+                    sInfo: "Toplam _TOTAL_ kayıttan _START_ - _END_ arası gösteriliyor",
+                },
+                "pageLength": 100
+            });
+        });
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-        </script>
-    </environment>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+        $('.select2').select2()
 
+        $('#datepicker').datepicker({
+            autoclose: true,
+            format: "yyyy/mm/dd",
+        })
+
+        $('#datepicker2').datepicker({
+            autoclose: true,
+            format: "yyyy/mm/dd",
+        })
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
