--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,66 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Ana Sayfa";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="content-wrapper">
+    <section class="content">
+        <div class="row">
+            <div class="col-lg-6 col-xs-6">
+                <div class="small-box bg-aqua-gradient">
+                    <div class="inner">
+                        <h3>@ViewBag.InsuranceCount</h3>
+                        <p>Toplam Talep</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-folder-open"></i>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 col-xs-6">
+                        <div class="small-box bg-green-gradient">
+                            <div class="inner">
+                                <h3>@ViewBag.ActiveInsuranceCount</h3>
+                                <p>Aktif Toplam Talep</p>
+                            </div>
+                            <div class="icon">
+                                <i class="fa fa-check"></i>
+                            </div>
+                            <a asp-controller="Main" asp-action="Index" class="small-box-footer">
+                                Git <i class="fa fa-arrow-circle-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-xs-6">
+                        <div class="small-box bg-red-gradient">
+                            <div class="inner">
+                                <h3>@ViewBag.PassiveInsuranceCount</h3>
+                                <p>Pasif Toplam Talep</p>
+                            </div>
+                            <div class="icon">
+                                <i class="fa fa-close"></i>
+                            </div>
+                            <a asp-controller="Main" asp-action="Index2" class="small-box-footer">
+                                Git <i class="fa fa-arrow-circle-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xs-6">
+                <div class="small-box bg-aqua-gradient">
+                    <div class="inner">
+                        <h3>@ViewBag.CustomerCount</h3>
+
+                        <p>Toplam Müşteri</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-users"></i>
+                    </div>
+                    <a asp-controller="Main" asp-action="Index3" class="small-box-footer">
+                        Git <i class="fa fa-arrow-circle-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
