--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,25 +1,27 @@
-﻿@model ErrorViewModel
+﻿@model TemplateProject.Models.ViewModels.ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Hata";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Bir hata oluştu</h1>
 
 @if (Model.ShowRequestId)
 {
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+    <div class="content-wrapper">
+        <section class="content">
+            <div class="error-page">
+                <h2 class="headline text-red">500</h2>
+                <div class="error-content">
+                    <h3><i class="fa fa-warning text-red"></i> Tüh! Bir hata oluştu. Hatanın açıklaması şu şekildeymiş:</h3>
+                    <p>
+                        <h5><b>@Model.RequestMessage</b></h5>
+                        Hemen site yöneticisi ile iletişime geçin ki durumu hızlıca çözelim.
+                        Bu sırada <a asp-controller="Home" asp-action="Index">ana sayfaya dönüp</a> diğer işlerinize devam edebilirsiniz.
+                    </p>
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+                    <a href="@Context.Request.Headers["Referer"].ToString()" class="btn btn-danger btn-block">Geri Dön</a>
+                </div>
+            </div>
+        </section>
+    </div>
+}
