--- a/Views/Main/Index.cshtml
+++ b/Views/Main/Index.cshtml
@@ -16,7 +16,7 @@
         </h3>
         <form method="post" enctype="multipart/form-data">
             <a class="btn btn-success" asp-action="Create">Yeni Oluştur</a>
-            <a class="btn btn-info" asp-controller="Insurance" asp-action="ExportAllActiveInsurances">Dışa Aktar</a>
+            <a class="btn btn-info" asp-controller="Main" asp-action="ExportAllActiveInsurances">Dışa Aktar</a>
         </form>
         <div class="row">
             <div class="col-xs-12">
