--- a/Views/Main/Index2.cshtml
+++ b/Views/Main/Index2.cshtml
@@ -15,7 +15,7 @@
             <i class="glyphicon glyphicon-folder-close"></i>&nbsp;Pasif Poliçeler
         </h3>
         <form method="post" enctype="multipart/form-data">
-            <a class="btn btn-info" asp-controller="Insurance" asp-action="ExportAllPassiveInsurances">Dışa Aktar</a>
+            <a class="btn btn-info" asp-controller="Main" asp-action="ExportAllPassiveInsurances">Dışa Aktar</a>
         </form>
         <div class="row">
             <div class="col-xs-12">
